# SceneWeaver

./: .gitignore  LICENSE  README.md  now_talk.md  pyproject.toml  sand_box_fix.md  test.md  test.py  速度评估报告
docs/: ARCHITECTURE.md  CLI.md  CONTEXT_SUMMARY.md  DEVELOPMENT_LOG.md  EXECUTION_STATUS.md  PLAN.md  PRD.md  README.md  REFERENCE_NOTES.md  ROADMAP.md  SCHEMA.md  TECHNICAL_DESIGN.md  USAGE.md  我自己的规划纲要.md
examples/: associate.json  experience_card.json  film_analysis.json  scene_analysis.json  scene_package.json
prompts/: Director.md  associate.md  scene_analysis.md
src/mocktesting/: README.md  __init__.py  constraint_layer.py  embedding_text_builder.py  eval_input_generator.py  eval_methods.py  mock_retriever.py  query_planner.py
src/retreieval_lab/: README.md  __init__.py  __main__.py  architecture.py  cli.py  compat.py
src/retrieval_lab/: README.md  __init__.py  __main__.py  architecture.py  cli.py  (+2 more)
talking/: scene_analysis.md  whole talking.md  对话文件.md  建议.md  结果验证.md  结果验证2.md  项目现状.md
taxonomy/: director_tags_v1.json
tests/: test_associate_analyzer.py  test_cli.py  test_experience_extractor.py  test_fingerprint.py  test_keyword_loop.py  test_llm_client.py  test_mock_embedding_retriever.py  test_mock_pipeline.py  test_retreieval_lab_cli.py  test_retrieval_lab_sceneweaver_adapter.py  test_retrieval_lexical.py  test_retrieval_query_plan.py  test_retrieval_service.py  test_retrieval_usecase.py  test_scene_analyzer.py  test_schemas.py  test_subtitle_pipeline.py  test_tag_governance.py  test_user_cli.py  test_user_web.py  test_video_packaging.py
(+254 files in other folders)
